--- a/TaskAPI.Services/TaskAPI.Services.csproj
+++ b/TaskAPI.Services/TaskAPI.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskAPI.DataAccess\TaskAPI.DataAccess.csproj" />
     <ProjectReference Include="..\TaskAPI.Models\TaskAPI.Models.csproj" />
   </ItemGroup>
